- added missing range option - updated css classes to prevent wide options from collapsing flex

--- a/src/styles/Main.sass
+++ b/src/styles/Main.sass
@@ -278,16 +278,22 @@
 
   select
     @include input
-    max-width: 200px // Set a maximum width
+    // max-width: 200pz // Set a maximum width
+    
     overflow: hidden // Prevent overflow
     text-overflow: ellipsis // Add ellipsis for overflowed text
     white-space: nowrap // Prevent text wrapping
     box-shadow: none
+    flex-shrink: 0
+    width: fit-content
+    max-width: 100% /* Optional safeguard */
     &:disabled
       @include input-disabled
 
     &.short
       height: inherit
+    option 
+      white-space: nowrap
 
   //- Fonts
   h1
